--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 img{
-  max-width: 200px;
+   /* aspect of original image */
+    width: 200px;
+    height: auto;
+    /* aspect of box */
+    max-width: 100%;
 }
